# cveintel

./: .gitignore  README.md  grep.exe.stackdump  pyproject.toml
.github/workflows/: ci.yml  ports.yml
cveintel/: __init__.py  __main__.py  active.py  cli.py  drift.py  enrich.py  feeds.py  live.py  sarif.py  scoring.py  vulnmatch.py
demos/01-log4shell-incident/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/02-edge-appliance-exposure/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/03-moveit-supply-chain/: SCENARIO.md  epss.json  kev.json  scan.json
demos/04-exchange-proxyshell/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/05-ci-release-gate/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/06-scanner-noise-deprioritize/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/07-monthly-kev-review/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/08-bare-cve-ids-baseline/: SCENARIO.md  scan.json
demos/09-mixed-vendor-patch-tuesday/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
demos/10-internet-facing-asset-blast/: SCENARIO.md  epss.json  kev.json  nvd.json  scan.json
docs/: posture-drift.md
examples/: cves.json  cves_records.json  epss.json  help.txt  kev.json  nvd.json  sbom.json  version.txt
ports/go/: go.mod  (+2 more)
tests/: conftest.py  test_active.py  test_cli.py  test_cli_sbom_active.py  test_cvss_vectors.py  test_demos.py  test_diff_cli.py  test_drift.py  test_enrich.py  test_feeds.py  test_sarif.py  test_scoring.py  test_vulndb_local.py  test_vulnmatch.py
(+16 files in other folders)
