[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-cveintel"
version = "0.1.0"
description = "CVE enrichment + prioritization CLI: correlate CVSS, CISA KEV, and EPSS into an explained patch-first ranking."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognis Digital" }]
keywords = ["cve", "cvss", "kev", "epss", "vulnerability", "prioritization", "security", "triage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/cveintel"

[project.scripts]
cveintel = "cveintel.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["cveintel"]

[tool.setuptools.package-data]
cveintel = ["data_feeds_2026.json", "cognis_vulndb.jsonl.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
